--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 
 /* Components */
 @import "components/status-bar.css";
+@import "components/nav-bar.css";
 
 /* Screens */
 @import "screens/login.css";
@@ -12,4 +13,3 @@
 body{
     font-family: 'Open Sans', sans-ser;
 }
-
