--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -15,4 +15,32 @@
 
 .nav__link{
     color:#2F363E;
+    position:relative;
+}
+
+
+.nav__message-notification{
+    background-color:tomato;
+    width:28px;
+    height:28px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    border-radius:14px;
+    color:white;
+    font-weight:600;
+    position:absolute;
+    left:18px;
+    bottom:15px;
+}
+
+.nav__ellipsis-notification{
+    background-color:tomato;
+    width:6px;
+    height:6px;
+    display:flex;
+    border-radius:3px;
+    position:absolute;
+    left:30px;
+    bottom:30px;
 }
