--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -2,7 +2,7 @@
     display:flex;
     justify-content:space-between;
     align-items:center;
-    padding:0px 25px;
+    padding:0px var(--horizontal-space);
     margin-top:60px;
     
 }
