--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,6 +1,7 @@
 .user-component{
     display:flex;
     align-items:center;
+    justify-content:space-between;
 }
 
 .user-component__column:first-child{
@@ -12,8 +13,19 @@
     width:70px;
     height:70px;
     border-radius:30px;
-    margin:0px 15px 0px 25px;
-    
+    margin:0px 18px 0px 0px;
+}
+
+.user-component__avatar--xl{
+    width:80px;
+    height:80px;
+    border-radius:34px;
+}
+
+.user-component__avatar--sm{
+    width:60px;
+    height:60px;
+    border-radius:25px;
 }
 
 .user-component__title{
@@ -24,5 +36,12 @@
 .user-component__subtitle{
     margin-top:10px;
     color:#9E9E9E;
-    
+}
+
+.user-component__title--not-bold{
+    font-weight:400;
+}
+
+.user-component__column:last-child{
+    color:rgba(0,0,0,0.5);
 }
