--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -10,3 +10,21 @@
     color:#D5D5D5;
     padding:0px 3px;
 }
+
+.friends-screen{
+    padding:0px var(--horizontal-space);
+}
+
+.friends-screen__channel{
+    margin-top:23px;
+    border-top:1px solid rgba(0,0,0,0.1);
+    padding-top:15px;
+}
+
+.friends-screen__channel-header{
+    margin-bottom:30px;
+    display:flex;
+    justify-content:space-between;
+    color:rgba(0,0,0,0.5);
+}
+
