--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -4,7 +4,7 @@
     align-items:center;
     padding:0px var(--horizontal-space);
     margin-top:60px;
-    
+    margin-bottom:30px;
 }
 
 .screen-header__title{
