--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -42,6 +42,19 @@
     font-weight:400;
 }
 
+.user-component__title--chat-title{
+    font-weight:400;
+    font-size:20px;
+}
+
 .user-component__column:last-child{
     color:rgba(0,0,0,0.5);
+    display:flex;
+    flex-direction:column;
+    align-items:flex-end;
+}
+
+.user-component__time{
+    display:block;
+    margin-bottom:10px;
 }
