--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -2,8 +2,8 @@
     text-align:center;
     display:block;
     background-color:#FAFAFA;
-    padding:30px 0px 20px 0px;
     color:#424242;
+    margin-bottom:20px;
 }
 
 #friends-display-link i{
