--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,13 @@
 @import "screens/login.css";
 @import "screens/friends.css";
 @import "screens/chats.css";
+@import "screens/find.css";
 
 body{
     font-family: 'Open Sans', sans-ser;
     color:#2F363E;
+}
+
+.main-screen{
+    padding:0px var(--horizontal-space);
 }
