--- a/css/variables.css
+++ b/css/variables.css
@@ -2,5 +2,7 @@
     --yellow:#fae100;
     --brown:#3C1E1E;
     --horizontal-space:25px;
+    --main-border:1px solid rgba(0,0,0,0.1);
+    --grey-text:rgba(0,0,0,0.5);
 }
 
