--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -13,7 +13,7 @@
 
 .friends-screen__channel{
     margin-top:23px;
-    border-top:1px solid rgba(0,0,0,0.1);
+    border-top:var(--main-border);
     padding-top:15px;
 }
 
