--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -6,6 +6,9 @@
     padding:25px 40px;
     box-sizing:border-box;
     border-top: 1px solid rgba(0,0,0,0.15);
+    margin-top:100px;
+    z-index:1;
+
 }
 
 .nav__list{
