--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -6,6 +6,8 @@
     width:100%;
     box-sizing:border-box;
     top:0;
+    z-index:1;
+    background-color:#FFFFFF;
 }
 .status-bar__column{
     width:33%;
