--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 @import "screens/friends.css";
 @import "screens/chats.css";
 @import "screens/find.css";
+@import "screens/more.css";
 
 body{
     font-family: 'Open Sans', sans-ser;
