--- a/css/variables.css
+++ b/css/variables.css
@@ -4,5 +4,6 @@
     --horizontal-space:25px;
     --main-border:1px solid rgba(0,0,0,0.1);
     --grey-text:rgba(0,0,0,0.5);
+    --grey-icon:#494949;
 }
 
