--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
 @import "screens/chats.css";
 @import "screens/find.css";
 @import "screens/more.css";
+@import "screens/settings.css";
 
 body{
     font-family: 'Open Sans', sans-ser;
