--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -7,7 +7,6 @@
     box-sizing:border-box;
     top:0;
     z-index:1;
-    background-color:#FFFFFF;
 }
 .status-bar__column{
     width:33%;
@@ -34,4 +33,8 @@
 
 .status-bar__column .fa-battery-full{
     margin:0px 5px;
+}
+
+.chat-screen__status-bar{
+    background-color:var(--chat-blue);
 }
