--- a/css/variables.css
+++ b/css/variables.css
@@ -5,5 +5,6 @@
     --main-border:1px solid rgba(0,0,0,0.1);
     --grey-text:rgba(0,0,0,0.5);
     --grey-icon:#494949;
+    --chat-blue:#abc1d1;
 }
 
