--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -25,6 +25,17 @@
     font-size:30px;
 }
 
+@keyframes notificationAnimation{
+    0%{
+        transform:none;
+    }
+    50%{
+        transform:translateY(-5px) rotateY(360deg);
+    }
+    100%{
+        transform:none;
+    }
+}
 
 .nav__message-notification{
     background-color:tomato;
@@ -39,6 +50,7 @@
     position:absolute;
     left:18px;
     bottom:15px;
+    animation:notificationAnimation 2s ease-in-out infinite;
 }
 
 .nav__ellipsis-notification{
@@ -50,4 +62,33 @@
     position:absolute;
     left:30px;
     bottom:30px;
+}
+
+@keyframes appearBtnAnimation{
+    from{
+        transform:translateY(50px);
+        opacity:0;
+    }
+    to{
+        transform:none;
+        opacity:1;
+    }
+}
+
+.nav__btn{
+    transform:translateY(50px);
+    opacity:0;
+    animation:appearBtnAnimation 0.6s ease-in-out forwards;
+}
+
+.nav__btn:nth-child(2){
+     animation-delay:0.2s;   
+}
+
+.nav__btn:nth-child(3){
+    animation-delay:0.4s;
+}
+
+.nav__btn:nth-child(4){
+    animation-delay:0.6s;
 }
