--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -122,3 +122,28 @@
     bottom:10px;
 }
 
+@keyframes hearthBeat{
+    0%{
+        
+    }
+    50%{
+        
+    }
+    100%{
+        
+    }
+}
+
+@keyframes hearthChange{
+    from{
+        transform:none;
+    }
+    to{
+        transform:rotateY(180deg);
+        color:pink;
+    }
+}
+
+.open-post__photo__heart-count i:hover{
+    animation:hearthChange 0.5s ease-in-out forwards;
+}
