--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -124,26 +124,35 @@
 
 @keyframes hearthBeat{
     0%{
-        
+        color:white;
+        transform:none;
     }
     50%{
-        
+        color:red;
+        transform:scale(1.5);
     }
     100%{
-        
+        color:white;
+        transform:none;
     }
 }
 
 @keyframes hearthChange{
-    from{
+    0%{
         transform:none;
+        color:white;
     }
-    to{
-        transform:rotateY(180deg);
-        color:pink;
+    50%{
+        transform:rotateY(180deg) scale(1.5);
+        color:red;
+    }
+    0%{
+        transform:none;
+        color:white;
     }
 }
 
-.open-post__photo__heart-count i:hover{
-    animation:hearthChange 0.5s ease-in-out forwards;
+.open-post__photo__heart-count:hover i{
+    will-change:transform;
+    animation:hearthChange 2s ease-in-out infinite;
 }
