Debuging <<<<<<<HEAD error

--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 .more-screen .icon-row{
     margin-top:40px;
 }
@@ -38,11 +38,9 @@
 .more-suggestions__icon-image{
     font-size:32px;
     color:white;
-=======
-
+}
 
 .suggestion-header{
     margin-top:30px;
     font-size:18px;
->>>>>>> my-own-version
 }
